# epoch

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  Procfile  README.md  SPACETIME.md  backfill.yaml  copy.sh  epoch.yaml  epoch_sa_key.json  migrate.sh  rust-toolchain.toml  traders.json
.cargo/: config.toml
archive_stream/: Cargo.toml
archive_stream/src/: archiver.rs  errors.rs  lib.rs  loader.rs  parallel.rs  utils.rs
archive_stream/src/account/: archive_account.rs  bytes_wrapper.rs  hash.rs  mod.rs
archive_stream/src/archive/: account.rs  append_vec_meta.rs  iter.rs  mod.rs
archive_stream/src/decode_accounts/: bank.rs  mod.rs
archive_stream/src/extract_snapshot/: archived.rs  unpacked.rs
backfill/: Cargo.toml  README.md
backfill/src/: config.rs  errors.rs  main.rs
common/: Cargo.toml
common/src/: account.rs  hash.rs  lib.rs  macros.rs  ring_buffer.rs  serde.rs  traits.rs
common/src/types/: archive_account.rs  epoch.rs  keyed_account.rs  mod.rs  query.rs  rpc.rs  transaction.rs
common/src/utils/: any_bit_pattern_array.rs  checked_array.rs  mod.rs  numbers.rs  serde.rs  strings.rs
covest/: Cargo.toml
covest/src/: main.rs  plot.rs  trader.rs
decoder/: Cargo.toml
decoder/src/: archive.rs  lib.rs  program_decoder.rs
decoder/src/drift/: archive.rs  mod.rs
decoder/src/drift/types/: mod.rs  snapshot.rs  stats.rs  trader.rs
decoder/src/drift/types/program/: math.rs  mod.rs  oracle.rs  order.rs  perp.rs  spot.rs  user.rs
decoder/src/program_helpers/: drift.rs
decoder/tests/: drift.rs
epoch/: Cargo.toml  README.md
epoch/src/: account.rs  auth.rs  bootstrap.rs  config.rs  decoded_account.rs  errors.rs  handler.rs  logger.rs  main.rs
epoch_client/: Cargo.toml  README.md
epoch_client/src/: client.rs  lib.rs
epoch_server/: Cargo.toml
epoch_server/src/: bootstrap.rs  errors.rs  handler.rs  main.rs  utils.rs
gcs/: Cargo.toml
gcs/src/: bucket.rs  download.rs  errors.rs  lib.rs
gcs/src/bq/: account.rs  client.rs  column.rs  mod.rs  query.rs
idls/drift/: Cargo.toml
idls/drift/src/: lib.rs
migrations/: 20240310220608_epoch.up.sql  20240312005905_epoch.up.sql  20240409165446_epoch.up.sql  20240409213843_epoch.up.sql  20240508121610_epoch.up.sql
postgres/: Cargo.toml
postgres/src/: account.rs  client.rs  lib.rs  query.rs  statement_builder.rs
postgres/statements/: account.sql  account_delete.sql  account_upsert.sql  accounts.sql  accounts_by_key.sql  accounts_by_key_and_owner.sql  accounts_by_key_and_slot.sql  accounts_by_owner.sql  accounts_by_owner_and_slot.sql  accounts_by_slot.sql  accounts_key.sql  accounts_key_owner_slot.sql
snapshot/: Cargo.toml  README.md
snapshot/src/: archiver.rs  errors.rs  lib.rs  loader.rs
snapshot/src/archive/: append_vec_meta.rs  iter.rs
snapshot/src/decode_accounts/: append_vec.rs  bank.rs  mod.rs
snapshot/src/extract_snapshot/: archived.rs  mod.rs  unpacked.rs
spacetime/client/: Cargo.toml
spacetime/client/src/: identity.rs  lib.rs  spacetime_account.rs
spacetime/client/src/callbacks/: account.rs  connection.rs  message.rs  mod.rs  user.rs
spacetime/client/src/module/: callbacks.rs  events.rs  mod.rs
spacetime/client/src/module_bindings/: mod.rs
spacetime/client/src/reducers/: mod.rs  send_account.rs
spacetime/client/src/tables/: account.rs  message.rs  mod.rs  user.rs
spacetime/server/: Cargo.toml
spacetime/server/src/: connection.rs  lib.rs  reducers.rs  tables.rs
timescale/: Cargo.toml
timescale/migrations/: epoch.down.sql  epoch.up.sql
timescale/src/: account.rs  client.rs  lib.rs  settings.rs
warden/: Cargo.toml
warden/src/: errors.rs  hasher.rs  lib.rs  scrambler.rs  vault.rs  warden.rs
warden/src/redis/: mod.rs  redis_client.rs  to_redis_key.rs
warden/tests/: vault.rs
