[workspace]
resolver = "2"
members = [
    "archive_stream",
    "epoch",
    "gcs",
    "spacetime/*"
]

[workspace.package]
version = "0.1.0"
authors = ["Cosmic Lab <epochsolana@gmail.com>"]
repository = "https://github.com/cosmic-lab-inc"
license = "Apache-2.0"
edition = "2021"
description = "Solana archival account state, easily accessible by anyone."
categories = ["cryptography::cryptocurrencies", "database"]
keywords = ["solana"]

[workspace.dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
borsh = { version = "0.9.3" }
bytes = "1.2"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "=4.2.7", features = ["derive", "env"] }
cloud-storage = "0.11.1"
crossbeam = { version = "0.8.1" }
crossbeam-channel = "0.5.8"
csv = { version = "1.1.6" }
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["default"] }
itertools = "0.10.3"
log = "0.4"
memmap2 = "0.5.4"
num_cpus = { version = "1.13.1" }
regex = "1.9.1"
reqwest = { version = "0.11.20", features = ["blocking", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.14"
serde_derive = "1.0.171"
serde_json = "1.0.102"
serde_yaml = "0.9.25"
simplelog = "0.12.0"
solana-accounts-db = { version = "1.17.2", features = ["dev-context-only-utils"] }
solana-runtime = { version = "1.17.2", features = ["dev-context-only-utils"] }
solana-sdk = { version = "1.17.2", features = ["dev-context-only-utils"] }
#spacetimedb-sdk = "0.8.2"
tar = "0.4.38"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = { version = "0.1.14", features = ["net"] }
zstd = "0.11.2"
