[package]
name = "archive_stream"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
crossbeam-channel = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
memmap2 = { workspace = true }
num_cpus = { workspace = true }
rayon = "1.9.0"
reqwest = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
solana-accounts-db = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
