[package]
name = "backfill"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
archive_stream = { path = "../archive_stream" }
chrono = { workspace = true }
clap = { workspace = true }
common = { path = "../common" }
cloud-storage = { workspace = true }
crossbeam-channel = { workspace = true }
dotenv = { workspace = true }
gcs = { path = "../gcs" }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }
