[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
anchor-lang = ">=0.20.0"
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
sol-chainsaw = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
