[package]
name = "covest"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rayon = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
epoch_client = { path = "../epoch_client" }
crossbeam-channel = { workspace = true }
dotenv = { workspace = true }
gcs = { path = "../gcs" }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures = { workspace = true }
lazy_static = { workspace = true }
derive_more = "0.99.17"
serde_json = "1.0.114"
uuid = { version = "1.3.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
nacl = { workspace = true }
plotters = { version = "0.3.5", features = ["default"] }
futures-util = "0.3.30"
rand = "0.8.5"