[package]
name = "covest"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
derive_more = "0.99.17"
dotenv = { workspace = true }
epoch_client = { path = "../epoch_client" }
futures = { workspace = true }
futures-util = "0.3.30"
gcs = { path = "../gcs" }
lazy_static = { workspace = true }
log = { workspace = true }
nacl = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.114"
serde_yaml = { workspace = true }
simplelog = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
uuid = { version = "1.3.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
common = { path = "../common" }
