[package]
name = "decoder"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
common = { path = "../common" }
drift-cpi = { path = "../idls/drift" }
futures = { workspace = true }
futures-util = { workspace = true }
lazy_static = "1.4.0"
log = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
simplelog = { workspace = true }
solana-client = { workspace = true }
sol-chainsaw = { path = "../../sol-chainsaw", features = ["json", "network"] }
solana-sdk = { workspace = true }
tokio = { workspace = true }
