[package]
name = "epoch_client"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
rayon = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
common = { path = "../common" }
decoder = { path = "../decoder" }
dotenv = { workspace = true }
gcs = { path = "../gcs" }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
simplelog = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
lazy_static = { workspace = true }
derive_more = "0.99.17"
serde_json = "1.0.114"
uuid = { version = "1.3.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
warden = { path = "../warden" }
common_utils = { version = "0.2.3", registry = "epoch" }
player_profile = { version = "0.7.5", registry = "epoch", features = ["client"] }
profile_vault = { version = "0.7.5", registry = "epoch", features = ["client"] }
anchor-lang = { verion = "0.25.26", registry = "epoch" }
nacl = { workspace = true }
solana-account-decoder = { workspace = true }
plotters = "0.3.5"
futures = { workspace = true }
futures-util = { workspace = true }