[package]
name = "epoch_client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { verion = "0.25.26", registry = "epoch" }
anyhow = { workspace = true }
borsh = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
common = { path = "../common" }
common_utils = { version = "0.2.3", registry = "epoch" }
decoder = { path = "../decoder" }
derive_more = "0.99.17"
dotenv = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
gcs = { path = "../gcs" }
lazy_static = { workspace = true }
log = { workspace = true }
nacl = { workspace = true }
player_profile = { version = "0.7.5", registry = "epoch", features = ["client"] }
plotters = "0.3.5"
profile_vault = { version = "0.7.5", registry = "epoch", features = ["client"] }
rayon = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.114"
serde_yaml = { workspace = true }
simplelog = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
uuid = { version = "1.3.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
warden = { path = "../warden" }
