[package]
name = "gcs"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
archive_stream = { path = "../archive_stream" }
anyhow = { workspace = true }
base64 = { workspace = true }
cloud-storage = { workspace = true }
common = { path = "../common" }
futures-util = { workspace = true }
gcp-bigquery-client = "0.18.0"
log = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
