[package]
name = "timescale-client"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
bincode = { workspace = true }
bs58 = "0.4.0"
common = { path = "../common" }
config = { version = "^0.13", default-features = false, features = ["yaml"] }
crossbeam-channel = { workspace = true }
decoder = { path = "../decoder" }
dotenv = { workspace = true }
log = { workspace = true }
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
postgres-types = { version = "0.2.4", features = ["array-impls", "derive"] }
serde = { workspace = true }
serde-aux = "3"
solana-sdk = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = "0.3.1"
tokio-postgres = { version = "=0.7.6", features = ["array-impls"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-native-tls",
    "macros",
    "postgres",
    "migrate",
    "uuid",
]

[dev-dependencies]
rand = "0.8.5"
uuid = { version = "^1.2.2", features = ["serde", "v4"] }
