[package]
name = "warden"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
argon2 = { version = "0.5.3", features = ["alloc", "password-hash", "rand", "std"] }
anyhow = { workspace = true }
log = { workspace = true }
solana-sdk = { workspace = true }
redis = "0.25.2"
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.3.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
dotenv = { workspace = true }
common = { path = "../common" }
common_utils = { version = "0.2.1", registry = "epoch" }
player_profile = { version = "0.7.5", registry = "epoch", features = ["client"] }
profile_vault = { version = "0.7.5", registry = "epoch", features = ["client"] }
anchor-lang = { verion = "0.25.26", registry = "epoch" }
base64 = { workspace = true }
serde_json = { workspace = true }
nacl = "0.5.3"