[package]
name = "warden"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { verion = "0.25.26", registry = "epoch" }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["alloc", "password-hash", "rand", "std"] }
base64 = { workspace = true }
common = { path = "../common" }
common_utils = { version = "0.2.3", registry = "epoch" }
dotenv = { workspace = true }
hex = "0.4.3"
log = { workspace = true }
nacl = { workspace = true }
player_profile = { version = "0.7.5", registry = "epoch", features = ["client"] }
profile_vault = { version = "0.7.5", registry = "epoch", features = ["client"] }
redis = "0.25.2"
serde_json = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.3.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
