[package]
name = "spacetime-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
archive_stream = { path = "../../archive_stream" }
solana-sdk = { workspace = true }
spacetimedb-sdk = "0.8.2"
hex = "0.4.3"
